# 4420_ML_Pipeline

./: 1 - Data Cleansing.ipynb  2 - Machine Learning.ipynb  3 - Inference.ipynb  LICENSE  Modelling.ipynb  README.md  Supply Chain Data Prep.ipynb  Supply Chain Inference.ipynb  Supply Chain ML.ipynb  pyproject.toml
data/: dirty_credit_data (1).csv  ml_project_eda.csv  new_applicants (1).csv
ml_pipeline/: cleanse.py  encode.py  feature_engineering.py  model_evaluation.py
pickles/: data_pipeline.pickle
